[gd_scene load_steps=8 format=3 uid="uid://dp66x6r12345"]

[ext_resource type="Script" path="res://scripts/components/game_hud.gd" id="1_abcde"]
[ext_resource type="Texture2D" uid="uid://b6ra7i5qkug47" path="res://score_panel.png" id="2_stk2i"]
[ext_resource type="FontFile" uid="uid://ulruyehktvyh" path="res://font/boldpixels/BoldPixels.otf" id="3_7a4el"]
[ext_resource type="Texture2D" uid="uid://b73pj7813d7vi" path="res://dice_socket2.png" id="4_kwhh3"]
[ext_resource type="PackedScene" uid="uid://c7d6e5f4g3h2" path="res://scenes/components/joker_inventory.tscn" id="6_jokerinv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fplum"]
texture = ExtResource("2_stk2i")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scorebox"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.501961)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_transparent"]

[node name="GameHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_abcde")

[node name="MainLayout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="InfoPanel" type="MarginContainer" parent="MainLayout"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2

[node name="Panel" type="Panel" parent="MainLayout/InfoPanel"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_fplum")

[node name="VBoxContainer" type="VBoxContainer" parent="MainLayout/InfoPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 49.0
offset_top = 43.0
offset_right = -49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 26

[node name="VSeparator2" type="Control" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="StageLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 70
text = "STAGE 1-1"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="TargetScoreLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
text = "Target Score: 300"

[node name="CurrentScoreLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
text = "Current Score: 0"

[node name="ScoreCalcBox" type="VBoxContainer" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
theme_override_constants/separation = 10

[node name="ComboNameLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer/ScoreCalcBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 35
text = " "
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="CalculationBoxes" type="HBoxContainer" parent="MainLayout/InfoPanel/Panel/VBoxContainer/ScoreCalcBox"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ScoreBox" type="PanelContainer" parent="MainLayout/InfoPanel/Panel/VBoxContainer/ScoreCalcBox/CalculationBoxes"]
custom_minimum_size = Vector2(180, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_scorebox")

[node name="ScoreLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer/ScoreCalcBox/CalculationBoxes/ScoreBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="XLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer/ScoreCalcBox/CalculationBoxes"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
text = "x"
vertical_alignment = 1

[node name="MultiplierBox" type="PanelContainer" parent="MainLayout/InfoPanel/Panel/VBoxContainer/ScoreCalcBox/CalculationBoxes"]
custom_minimum_size = Vector2(100, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_scorebox")

[node name="MultiplierLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer/ScoreCalcBox/CalculationBoxes/MultiplierBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnScoreLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer/ScoreCalcBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
text = " "
horizontal_alignment = 2
vertical_alignment = 1

[node name="TurnsLeftLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
text = "# Combinations: 4"

[node name="InvestsLeftLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
text = "# Investments: 5"

[node name="GoldLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
text = "Gold: $0"

[node name="JokerInventory" parent="MainLayout/InfoPanel/Panel/VBoxContainer" instance=ExtResource("6_jokerinv")]
unique_name_in_owner = true
layout_mode = 2

[node name="VSeparator3" type="Control" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ViewDiceBagButton" type="Button" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/hover = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/normal = SubResource("StyleBoxEmpty_transparent")
text = "Dice Bag"

[node name="SocketArea" type="VBoxContainer" parent="MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="SocketContainer" type="HBoxContainer" parent="MainLayout/SocketArea"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="SortButtonsContainer" type="HBoxContainer" parent="MainLayout/SocketArea"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="TextureRect" type="TextureRect" parent="MainLayout/SocketArea/SortButtonsContainer"]
modulate = Color(1, 1, 1, 0.784314)
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.15
mouse_filter = 2
texture = ExtResource("4_kwhh3")
expand_mode = 3

[node name="SortByColorButton" type="Button" parent="MainLayout/SocketArea/SortButtonsContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/hover = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/normal = SubResource("StyleBoxEmpty_transparent")
text = "Color"

[node name="TextureRect2" type="TextureRect" parent="MainLayout/SocketArea/SortButtonsContainer"]
modulate = Color(1, 1, 1, 0.784314)
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.15
mouse_filter = 2
texture = ExtResource("4_kwhh3")
expand_mode = 3

[node name="SortByNumberButton" type="Button" parent="MainLayout/SocketArea/SortButtonsContainer/TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/hover = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/normal = SubResource("StyleBoxEmpty_transparent")
text = "Number"

[node name="Spacer" type="Control" parent="MainLayout/SocketArea"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="InteractionUI" type="MarginContainer" parent="MainLayout/SocketArea"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MainLayout/SocketArea/InteractionUI"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="VSeparator3" type="Control" parent="MainLayout/SocketArea/InteractionUI/HBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MainLayout/SocketArea/InteractionUI/HBoxContainer"]
modulate = Color(1, 1, 1, 0.784314)
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.15
mouse_filter = 2
texture = ExtResource("4_kwhh3")
expand_mode = 3

[node name="SubmitButton" type="Button" parent="MainLayout/SocketArea/InteractionUI/HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/hover = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/normal = SubResource("StyleBoxEmpty_transparent")
text = "Combination"

[node name="TextureRect2" type="TextureRect" parent="MainLayout/SocketArea/InteractionUI/HBoxContainer"]
modulate = Color(1, 1, 1, 0.784314)
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.15
mouse_filter = 2
texture = ExtResource("4_kwhh3")
expand_mode = 3

[node name="InvestButton" type="Button" parent="MainLayout/SocketArea/InteractionUI/HBoxContainer/TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/hover = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/normal = SubResource("StyleBoxEmpty_transparent")
text = "Invest"

[node name="TextureRect3" type="TextureRect" parent="MainLayout/SocketArea/InteractionUI/HBoxContainer"]
modulate = Color(1, 1, 1, 0.784314)
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.15
mouse_filter = 2
texture = ExtResource("4_kwhh3")
expand_mode = 3

[node name="TurnEndButton" type="Button" parent="MainLayout/SocketArea/InteractionUI/HBoxContainer/TextureRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/hover = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/normal = SubResource("StyleBoxEmpty_transparent")
text = "End"

[node name="VSeparator2" type="Control" parent="MainLayout/SocketArea/InteractionUI/HBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
